feature: 初步对接下单

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -43,7 +43,8 @@
     "usingComponents": true,
     "optimization": {
       "subPackages": true
-    }
+    },
+    "industrySDK": true
   },
   "app-plus": {
     "usingComponents": true,
